[package]
name = "bevy_bsn"
version = "0.12.0-dev"
edition = "2021"
description = "Provides bsn format functionality for Bevy"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
thiserror = "1.0"
bevy_math = { path = "../bevy_math", version = "0.12.0-dev" }
