[package]
name = "bevy_scene2"
version = "0.12.0-dev"
edition = "2021"
description = "Provides scene functionality for Bevy"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.12.0-dev" }
bevy_asset = { path = "../bevy_asset", version = "0.12.0-dev", features = ["bevy_bsn"] }
bevy_bsn = { path = "../bevy_bsn", version = "0.12.0-dev" }
bevy_core = { path = "../bevy_core", version = "0.12.0-dev" }
bevy_hierarchy = { path = "../bevy_hierarchy", version = "0.12.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.12.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.12.0-dev", features = ["multi-threaded"]}
bevy_log = { path = "../bevy_log", version = "0.12.0-dev"}
bevy_reflect = { path = "../bevy_reflect", version = "0.12.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.12.0-dev" }

bevy_scene_macros = { path = "macros", version = "0.12.0-dev" }

thiserror = "1.0"
anyhow = "1.0"
smallvec = "1.6"